--- a/Listy jednokierunkowe/Listy/Listy/Listy.vcxproj
+++ b/Listy jednokierunkowe/Listy/Listy/Listy.vcxproj
@@ -151,9 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Funkcje.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Funkcje.cpp" />
     <ClCompile Include="Listy.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
